k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cse474-prod
  labels:
    app: file-processing-system
    environment: production
