k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - port: 80
      targetPort: 3001
  type: ClusterIP
