k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
  namespace: cse474-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
spec:
  ingressClassName: nginx
  rules:
    - host: preview.cse474.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: preview-service
                port:
                  number: 3001
    - host: compression.cse474.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: compression-service
                port:
                  number: 3002
